# neural-networks

./: .gitignore  Detekcija ljudske aktivnosti.pptx  HAR-project.ipynb  README.md  Specifikacija ORI.docx  pyproject.toml
scripts/: test_dataloader.py  test_dataset.py
src/config/: config.py
src/data/: dataloaders.py
src/datasets/: har_dataset.py
src/neural_networks.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/neural_networks/config/: config.py
src/neural_networks/data/: dataloaders.py
src/neural_networks/datasets/: har_dataset.py
src/neural_networks/evaluation/: classification.py  confusion_matrix.py  predictions.py
src/neural_networks/models/: cnn.py  cnn_lstm.py  dense.py  gru.py  lstm.py
src/neural_networks/training/: checkpoint.py  early_stopping.py  trainer.py
src/neural_networks/visualization/: plots.py
